--- a/.github/workflows/selenium-tests.yml
+++ b/.github/workflows/selenium-tests.yml
@@ -1,11 +1,13 @@
-name: Run Selenium Tests
+name: Run Git Hub Actions Page
 
 on:
-  workflow_dispatch:
-  push:
-    branches: [ "master", "main" ]
-  pull_request:
-    branches: [ "master", "main" ]
+  workflow_dispatch:  # Enable it manual execution
+
+  # ESTO LO COMENTE PARA QUE NO SE EJECUTE EN LOS PUSH DE CODIGO
+  #push:
+  #  branches: [ "master", "main" ]
+  #pull_request:
+  #  branches: [ "master", "main" ]
 
 jobs:
   test:
@@ -28,7 +30,7 @@ jobs:
         run: npm install -g allure-commandline --save-dev
 
       - name: Run smoke test
-        run: mvn clean -Dtest=SmokeTest test
+        run: mvn clean -Dtest=SmokeTests test
 
       - name: Verify Allure content
         run: |
@@ -49,3 +51,13 @@ jobs:
         with:
           name: allure-report
           path: target/allure-report
+
+      - name: Deploy Allure Report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: target/allure-report
+          destination_dir: allure-report
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
